: feat: add a mailer to send the email
